--- a/main.css
+++ b/main.css
@@ -1,7 +1,21 @@
 body {
+  font-size: 1.125rem;
   margin: 0 auto;
 }
 
+/*typography*/
+h1 {
+  font-size: 3rem;
+  text-align: center;
+}
+h2 {
+  font-size: 1.5rem;
+}
+.accent {
+  color: #b7832f;
+}
+
+/*layout*/
 .main-container {
   border: 2px solid blue;
   width: 90%;
@@ -9,16 +23,18 @@ body {
 }
 
 .container {
-  width: 50%;
+  width: 90%;
+  max-width: 980px;
   margin: 0 auto;
 }
 
 img {
-  max-width: 100%;
+  git max-height: 200px;
 }
 
 .columns {
   display: flex;
+  color: #707070;
 }
 
 .col .col {
@@ -26,7 +42,8 @@ img {
 }
 
 .text {
-  background-color: brown;
+  color: #fff;
+  background-color: #312614;
   border: 2px solid red;
   padding: 10px;
   margin-top: 1.5rem;
