--- a/main.css
+++ b/main.css
@@ -23,13 +23,15 @@ h2 {
 }
 
 .container {
-  width: 90%;
+  width: 95%;
   max-width: 980px;
   margin: 0 auto;
 }
 
 img {
-  git max-height: 200px;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .columns {
