--- a/main.css
+++ b/main.css
@@ -37,8 +37,18 @@ img {
 .columns {
   display: flex;
   color: #707070;
+  margin: 1em 0;
 }
 
+.col-1 {
+  width: 25%;
+}
+.col-2 {
+  width: 50%;
+}
+.col-3 {
+  width: 75%;
+}
 .col .col {
   margin-right: 1.5rem;
 }
@@ -46,8 +56,5 @@ img {
 .text {
   color: #fff;
   background-color: #312614;
-  border: 2px solid red;
-  padding: 10px;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  padding: 1em;
 }
